# ros_sandbox

./: .gitignore  README.md  atk.yml
containers/vnc/: vnc.dockerfile
workspace/install/: local_setup.sh  setup.sh
workspace/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
workspace/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
workspace/install/image_receiver/share/image_receiver/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/image_spawner/share/image_spawner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
workspace/launch/: composable_launch.py  image_lidar_roi_publisher_launch.py  image_roi_publisher_launch.py  multi_image_publisher_launch.py  traffic_light_launch.py  video_publisher_launch.py
workspace/log/: latest_build
workspace/src/archive/cpp_image_processor/: package.xml
workspace/src/archive/image_spawner/: CMakeLists.txt  package.xml
workspace/src/archive/image_spawner/src/: image_spawner_node.cpp
workspace/src/archive/py_image_processor/: package.xml  setup.cfg
workspace/src/archive/py_image_processor/py_image_processor/: image_processor_node.py
workspace/src/archive/py_image_receiver/: package.xml  setup.py
workspace/src/archive/sandbox_launch/: package.xml
workspace/src/common_pkgs/: package.xml
workspace/src/cpp_image_processor/: CMakeLists.txt
workspace/src/cpp_image_processor/src/: image_processor_node.cpp
workspace/src/cpp_image_receiver/: CMakeLists.txt  package.xml
workspace/src/cpp_image_receiver/src/: image_receiver_node.cpp
workspace/src/cpp_pubsub/: CMakeLists.txt
workspace/src/image_lidar_roi_publisher/: package.xml  setup.cfg  setup.py
workspace/src/image_lidar_roi_publisher/data/: 00000001.pkl  00000001.txt  00002713.txt  00002714.pkl  00002714.txt  00002715.txt
workspace/src/image_lidar_roi_publisher/image_lidar_roi_publisher/: image_lidar_roi_publisher_node.py
workspace/src/image_receiver/: CMakeLists.txt  package.xml
workspace/src/image_receiver/src/: image_receiver_node.cpp
workspace/src/image_roi_publisher/: package.xml  setup.cfg  setup.py
workspace/src/image_roi_publisher/data/traffic_lights/: sample1.txt  sample_many.txt
workspace/src/image_roi_publisher/data/traffic_signs/: sample.txt  traffic_sign_array.txt
workspace/src/image_roi_publisher/image_roi_publisher/: image_roi_publisher_node.py
workspace/src/image_spawner/: CMakeLists.txt
workspace/src/image_spawner/src/: .image_spawner_node.cpp.swp  image_spawner_node.cpp
workspace/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace/src/install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
workspace/src/install/cpp_pubsub/share/ament_index/resource_index/parent_prefix_path/: cpp_pubsub
workspace/src/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
workspace/src/install/image_receiver/share/image_receiver/: package.bash  package.zsh
workspace/src/install/image_spawner/share/image_spawner/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/src/install/image_spawner/share/image_spawner/cmake/: image_spawnerConfig.cmake
workspace/src/log/: latest_build
workspace/src/multi_image_publisher/: package.xml  setup.cfg  setup.py
workspace/src/multi_image_publisher/multi_image_publisher/: multi_image_publisher_node.py
workspace/src/py_image_processor/: setup.py
workspace/src/py_image_receiver/: setup.cfg
workspace/src/py_image_receiver/py_image_receiver/: .image_receiver_node.py.swp  image_receiver_node.py
workspace/src/sandbox_launch/: CMakeLists.txt
workspace/src/sandbox_launch/launch/: cpp_launch.py  py_launch.py
workspace/src/traffic_light_spawner/: package.xml  setup.cfg  setup.py
workspace/src/traffic_light_spawner/traffic_light_spawner/: traffic_light_spawner_node.py
workspace/src/video_publisher/: package.xml  setup.py
workspace/src/video_publisher/video_publisher/: video_publisher_node.py
workspace/src/wauto_perception_msgs/: CMakeLists.txt  package.xml
workspace/src/wauto_perception_msgs/msg/: ObjectClassification.msg  Roi.msg  RoiArray.msg
